# slide-tag

./: .gitignore  DATASETS.md  LIESMICH.md  README.md  various.md
.github/workflows/: release.yml
brain-analysis/: README.md  main.py  pyproject.toml
brain-analysis/brain_analysis/: __init__.py  __main__.py
companies/: README.md
companies/novartis/: 01_main.py  02_dump.py  03_summary.py  README.md  main.py  pyproject.toml
companies/philips_no/report/: 2024.md
companies/roche/reports/: 2024.md  2024_financials.md  prompt
companies/roche/rs_scrape_jobs/: .env  .env.example  Cargo.toml  README.md  STAGE11_IMPLEMENTATION_SUMMARY.md  STAGE12_IMPLEMENTATION_SUMMARY.md  build.sh  build_release.sh  deploy.sh  test_oauth.sh  test_oauth_real.sh
companies/roche/rs_scrape_jobs/.cargo/: config.toml
companies/roche/rs_scrape_jobs/crates/chromiumoxide_autowait/: Cargo.toml
companies/roche/rs_scrape_jobs/crates/chromiumoxide_autowait/src/: ext.rs  lib.rs  scripts.rs  types.rs  waiter.rs
companies/roche/rs_scrape_jobs/deployment/templates/: nginx.conf.snippet  rs-scrape.service
companies/roche/rs_scrape_jobs/docs/: carbonyl.md  cargo-helpers.md  release_process.md
companies/roche/rs_scrape_jobs/plans/: 01_requirements.sh  01b_rust_port_plan.md  02_implementation.sh  03_tasks.md  04_update_user_handling.sh  05_nginx.md  06_plan_check.sh  06_plan_check_response.md  08_reduce_deps.sh  09_debug_parameter_issue.sh  10_endplanungsvorbereitung.sh  10_final_integration.md  11_visualisierung.md  11_visualisierung.sh  12_visualisierung_review.md  12_visualisierung_review.sh  13_session.md  13_session_store.sh  14_release.md  14_release.sh  15_control.md  15_control.sh  16_integration_test.md  16_integration_test.sh  17_chrome.md  18_ai_architect_request.md  18_ai_architect_request.sh  19_ai_summarization_button_request.sh  19_ai_summarize_button_request.md  plan-sessionPersistenceFix.prompt.md
companies/roche/rs_scrape_jobs/src/: 00_models.rs  01_db_setup.rs  01b_db_repo.rs  01c_db_traits.rs  02_web_core.rs  03_scraper_roche.rs  04_downloader.rs  05_json_extractor.rs  06_data_ingestion.rs  06b_pipeline_orchestrator.rs  07_ai_core.rs  07b_ai_gemini.rs  07d_ai_rate_limiter.rs  07e_ai_batch_builder.rs  08_ai_workflow.rs  08_config.rs  11_web_server.rs  12_auth.rs  13_web_ui.rs  14_scheduler.rs  15_app_state.rs  16_custom_session_store.rs  17_admin.rs  lib.rs
companies/roche/rs_scrape_jobs/templates/: admin.html  base.html  dashboard.html  error.html  index.html  job_detail.html  jobs.html  match_detail.html  profile.html
companies/roche/rs_scrape_jobs/tests/: test_ux_match_reload_problem.rs  web_integration.rs  web_integration_e2e.rs
companies/roche/scrape2/: 03_extract_job_info.py  04_json_to_sqlite.py  05_db_filter.py  06_jobs_to_markdown.py  df_slide_with_ai_annotations.csv  df_with_ai_annotations.csv  fetchlinks.py  format.sh  high_relevance_jobs.md  main.py  pyproject.toml
companies/roche/scrape_jobs/: 00_run_pipeline.py  01_main.py  02_fetchlinks.py  04_json_to_sqlite.py  05_db_filter.py  05b_match_candidate.py  06_jobs_to_markdown.py  07_jobs_to_latex.py  07b_jobs_to_typst.py  07c_all_jobs_to_typst.py  EXAMPLE_WORKFLOWS.md  FOLDER_STRUCTURE_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_REFERENCE.md  README.md  REQUIREMENTS_VERIFICATION.md  df_with_ai_annotations.csv  high_relevance_jobs.md  jobs.txt  pyproject.toml
companies/roche/scrape_jobs/20260124/: run.sh
companies/roche/scrape_pw/: 01_scraper.py  02_scrape.py  README.md  pyproject.toml
companies/roche/scrape_roche_jobs/: main.py  pyproject.toml
companies/roche/technology/sbx/: 20250910_sbx_webinar.txt  README.md  eshg-2025-workshop-mark-kokoris-mc--17411.txt  sean-hofherr-eshg-2025-workshop-mc--17449.txt
