[project]
name = "brain-analysis"
version = "0.1.0"
description = "A project to analyze mouse brain spatial transcriptomics data."
dependencies = [
    "anndata==0.10.7",
    "scanpy==1.10.2",
    "h5py"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_analysis"]
