[package]
name = "rs-scrape"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
async-trait = "0.1.89"
futures = "0.3"
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }

[dependencies]
# Required dependencies
anyhow = "1.0"
log = "0.4"
async-trait = "0.1.89"
futures = "0.3"
regex = "1.12"
chrono = { version = "0.4", features = ["serde"] }

# Essential runtime and serialization libs
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optionale Abhängigkeiten (nur kompiliert, wenn Feature aktiv)
libsql = { version = "0.9.29", default-features = false, features = ["core"], optional = true }
chromiumoxide = { version = "0.9", optional = true }
rig-core = { version = "0.32", optional = true }
schemars = { version = "1.2", optional = true }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", optional = true, features = ["gzip", "brotli", "rustls", "json"] }

# Web, Templates & Utilities
askama = { version = "0.15", optional = true }
axum = { version = "0.8", optional = true }
tower-sessions = { version = "0.15", optional = true }
tokio-cron-scheduler = { version = "0.15", optional = true }
rand = { version = "0.10", optional = true }
oauth2 = { version = "4.4", optional = true }

[features]
default = ["db", "scraper", "ai", "web"] # Für den finalen Build
db = ["dep:libsql"]
scraper =["dep:chromiumoxide", "dep:reqwest", "dep:rand"]
ai = ["dep:rig-core", "dep:schemars"]
web =["dep:askama", "dep:axum", "dep:tower-sessions", "dep:tokio-cron-scheduler", "dep:rand", "dep:oauth2"]
