[project]
name = "scrape2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.5",
    "google-genai>=1.36.0",
    "helium>=5.1.1",
    "loguru>=0.7.3",
    "pandas>=2.3.2",
    "playwright>=1.57.0",
    "sqlite-minutils>=4.0.3",
]
